--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <div class="nav-container">
                 <a href="/index.html" class="logo">
-                    <img src="/img/carla.jpg" alt="C" class="logo-image">Carla
+                    <img src="img/carla.jpg" alt="C" class="logo-image">Carla
                     <span>Portfolio</span>
                 </a>
                 <div class="nav-links">
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <div class="hero-image animate">
-                    <img src="/img/carla.jpg" alt="Profile Photo">
+                    <img src="img/carla.jpg" alt="Profile Photo">
                 </div>
             </div>
         </div>
@@ -175,7 +175,7 @@
                 <!-- Project 1 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/img/lms-login.jpg" alt="Library Management System">
+                        <img src="img/lms-login.jpg" alt="Library Management System">
                     </div>
                     <div class="project-body">
                         <h3 class="project-title">Library Management System</h3>
@@ -194,7 +194,7 @@
                 <!-- Project 2 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/img/todolist-login.jpg" alt="To-do list App/Website">
+                        <img src="img/todolist-login.jpg" alt="To-do list App/Website">
                     </div>
                     <div class="project-body">
                         <h3 class="project-title">To-do list App/Website</h3>
@@ -218,7 +218,7 @@
                 <!-- Project 3 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/img/e-commerce-login.png" alt="E-commerce Website">
+                        <img src="img/e-commerce-login.png" alt="E-commerce Website">
                     </div>
                     <div class="project-body">
                         <h3 class="project-title">E-commerce Website</h3>
