--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="/img/carla.jpg">
+    <link rel="icon" type="image/png" href="img/carla.jpg">
     <title>Carla Mae Villafranca - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -14,7 +14,7 @@
      <header>
         <nav>
             <div class="nav-container">
-                <a href="/index.html" class="logo">
+                <a href="index.html" class="logo">
                     <img src="img/carla.jpg" alt="C" class="logo-image">Carla
                     <span>Portfolio</span>
                 </a>
